Fixing problem with multi-schema import. Starting on Tomcat startup task. Improving help target.